[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 87, 315.485 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_top = 8.0
margin_right = 780.0
margin_bottom = 22.0
text = "Timer: 00"
align = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_top = 8.0
margin_right = 780.0
margin_bottom = 22.0
text = "Score: 000"
align = 1

[node name="LevelLabel" type="Label" parent="MarginContainer"]
margin_top = 8.0
margin_right = 780.0
margin_bottom = 22.0
text = "Level: 00"

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 2.0
margin_bottom = 99.0
text = "
LIKE COIN
v0.3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 376.0
margin_top = 364.0
margin_right = 426.0
margin_bottom = 384.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
[connection signal="start_game" from="." to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
